UPDATE: Delete leftover files

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -406,6 +406,12 @@ h6, .h6 {
   font-weight: 300;
 }
 
+.lead_icons > i{
+  font-size: 3em;
+  display: flex;
+  flex-direction: row;
+}
+
 .display-1 {
   font-size: 6rem;
   font-weight: 300;
